--- a/java/settings.gradle
+++ b/java/settings.gradle
@@ -1,7 +1,3 @@
-// 루트 프로젝트의 이름 설정
-// => 배포 파일을 만들 때 이 이름을 사용한다.
-rootProject.name = 'java-project'
-
-// 서브 프로젝트의 폴더 등록
-// => 빌드 작업을 수행할 때 서브 프로젝트 폴더에 있는 build.gradle 파일을 참조한다.
-include('app')
+//루트 프로젝트의 이름 설정
+//=> 배포 파일 만들 때 이 이름을 사용한다
+rootProject.name = 'java-basic'
